--- a/keijiban/keijiapp/templates/keijiapp/login.html
+++ b/keijiban/keijiapp/templates/keijiapp/login.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>ログイン</h1>
+    <h1>ログイン画面</h1>
     <form action="" method="POST">
         {% csrf_token %}
         {{ form.non_field_errors }}
