--- a/keijiban/keijiapp/templates/keijiapp/login.html
+++ b/keijiban/keijiapp/templates/keijiapp/login.html
@@ -1,22 +1,50 @@
-{% extends 'keijiapp/base.html' %}
+<!doctype html>
+<html lang="ja">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{% block title %}ログイン{% endblock %}
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-{% block content %}
-<div class="container">
-    <h1>ログイン画面</h1>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.non_field_errors }}
-        {% for field in form %}
-            {{ field.label }}
-            <br>
-            {{ field }}
-            <br>
-            {{ field.errors }}
-        {% endfor %}
-        <br>
-        <button type="submit">ログイン</button>
-    </form>
-</div>
-{% endblock %}
+    <title>ログイン</title>
+  </head>
+
+  <body style="background-color: #C0C0C0;">
+    <div class="container">
+        <div class="d-flex align-items-center justify-content-center" style="height:800px;">
+        <div class="col-md-4">
+        <form action="" method="POST">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="text-center">Sign up!</h1>
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
+                    {% for field in form %}
+                        {{ field.label }}
+                        <br>
+                        {{ field }}
+                        <br>
+                        {{ field.errors }}
+                    {% endfor %}
+                    <br>
+                    <button type="submit" class="btn btn-outline-primary" style="width:400px">ログイン</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+  </body>
+</html>
