--- a/keijiban/keijiapp/templates/keijiapp/base.html
+++ b/keijiban/keijiapp/templates/keijiapp/base.html
@@ -10,8 +10,23 @@
 
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
-   
 
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'list' %}">あなただけのWeb掲示板</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="{% url 'form' %}">投稿</a>
+            <a class="nav-link" href="{% url 'logout' %}">ログアウト</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    {% block content %}{% endblock %}
   </body>
 </html>
