--- a/keijiban/keijiapp/templates/keijiapp/base.html
+++ b/keijiban/keijiapp/templates/keijiapp/base.html
@@ -12,15 +12,17 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'list' %}">あなただけのWeb掲示板</a>
+        <a class="navbar-brand" href="{% url 'list' %}">Djangoで始めるWeb掲示板</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse show" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="{% url 'form' %}">投稿</a>
+            <div class="form">
+              <a class="nav-link active" href="{% url 'create' %}">投稿</a>
+            </div>
             <a class="nav-link" href="{% url 'logout' %}">ログアウト</a>
           </div>
         </div>
