--- a/keijiban/keijiapp/templates/keijiapp/delete.html
+++ b/keijiban/keijiapp/templates/keijiapp/delete.html
@@ -8,7 +8,7 @@
     <hr>
     <form method="post">
         {% csrf_token %}
-        <p>{{ object.title }}を削除しますか？</p>
+        <p>【　{{ object.title }}　】を削除しますか？</p>
         <p><button tipe='submit' class="btn btn-danger">OK</button></P>
         <a href="{% url 'list' %}" class="card-link">掲示板一覧に戻る</a>
     </form>
