--- a/keijiban/keijiapp/templates/keijiapp/update.html
+++ b/keijiban/keijiapp/templates/keijiapp/update.html
@@ -15,7 +15,7 @@
                 <textarea id="text" name="content" rows="8" cols="80" class="form-control">{{ object.content }}</textarea>
             </div>
             <p></p>
-            <button type="submit" class="btn btn-secondary" style="width:200px">編集する</button>
+            <button type="submit" class="btn btn-secondary col-12">編集する</button>
         </form>
     </div>
 {% endblock %}
