--- a/keijiban/keijiapp/templates/keijiapp/login.html
+++ b/keijiban/keijiapp/templates/keijiapp/login.html
@@ -30,6 +30,8 @@
                     {% endfor %}
                     <br>
                     <button type="submit" class="btn btn-outline-primary col-12">ログイン</button>
+                    <br>
+                    <a href="{% url 'signup' %}">新規会員登録はこちら</a>
                 </div>
             </div>
           </form>
