--- a/keijiban/keijiapp/templates/keijiapp/create.html
+++ b/keijiban/keijiapp/templates/keijiapp/create.html
@@ -15,6 +15,7 @@
     <div class="form-group">
       <label for="content">本文</label>
       <textarea id="text" name="content" rows="8" cols="80" class="form-control" placeholder="本文"></textarea>
+      <input type="datetime" name="created_time" class="form-control" value={{ object.created_time }}>
     </div>
     <br>
     <button type="submit" class="btn btn-primary col-12">投稿する</button>
