--- a/keijiban/keijiapp/templates/keijiapp/list.html
+++ b/keijiban/keijiapp/templates/keijiapp/list.html
@@ -14,6 +14,7 @@
       <div class="card-body">
           <div class="post">
             <h5 class="card-title">{{ item.title }}</h5>
+            <h6 class="d-grid gap2 d-md-flex justify-content-md-end">更新日：{{ item.updated_time | date }}</h6>
             <hr>
             <p class="card-text">{{ item.content | truncatechars:30}}</p>
             <a href="{% url 'detail' item.pk %}" button type="button" class="btn btn-outline-info">続きを読む</button></a>
