--- a/keijiban/keijiapp/templates/keijiapp/create.html
+++ b/keijiban/keijiapp/templates/keijiapp/create.html
@@ -4,18 +4,17 @@
 
 {% block content %}
 <div class="d-flex align-items-center justify-content-center mt-4">
-  <form action="" method="post">
+  <form method="post">
     {% csrf_token %}
     <div class="form-group">
       <h2>掲示板投稿</h2>
       <br>
       <label for="title">タイトル</label>
-      <input type="text" class="form-control" name="title" placeholder="タイトル">
+      <input type="text" class="form-control" name="title" placeholder="タイトル(15文字以内)">
     </div>
     <div class="form-group">
       <label for="content">本文</label>
       <textarea id="text" name="content" rows="8" cols="80" class="form-control" placeholder="本文"></textarea>
-      <input type="datetime" name="created_time" class="form-control" value={{ object.created_time }}>
     </div>
     <br>
     <button type="submit" class="btn btn-primary col-12">投稿する</button>
